--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <fork>true</fork>
-                    <mainClass>eu.kartoffelquadrat.lobbyservice.xox.Launcher</mainClass>
+                    <mainClass>eu.kartoffelquadrat.lobbyservice.xox.controller.Launcher</mainClass>
                 </configuration>
                 <executions>
                     <execution>
