Added HTML landing page mapping at Xox/webui/games/{sessionid}

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
             <artifactId>unirest-java</artifactId>
             <version>1.4.9</version>
         </dependency>
+
+        <!--    added for the web view resolving-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
