--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.port = 4244
 server.servlet.context-path=/Xox
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=ERROR
 spring.main.banner-mode=off
+
+# service properties
+gameservice.name=Xox
+oauth2.name=xox
+oauth2.password=laaPhie*aiN0
+
+# network properties
+lobbyservice.location=http://127.0.0.1:4242
