Implemented Xox REST controller stub

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-server.port = 4244
-server.servlet.context-path=/Xox
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=ERROR
-spring.main.banner-mode=off
-
-# service properties
+## Own service properties
+# Name, as it will be displayed by Lobby-Service
 gameservice.name=Xox
+# Credentials for OAuth token retrieval (required for registration at Lobby-Service)
 oauth2.name=xox
 oauth2.password=laaPhie*aiN0
 
-# network properties
+## Network properties
+# Location of the Lobby-Service
 lobbyservice.location=http://127.0.0.1:4242
+# Own port
+server.port=4244
+# Own context path, should be identical to gameservice.name
+server.servlet.context-path=/Xox
+
+## Tell Spring not to spam the console
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=ERROR
+spring.main.banner-mode=off
