--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ lobbyservice.location=http://127.0.0.1:4242
 server.port=4244
 # Own context path, should be identical to gameservice.name
 server.servlet.context-path=/Xox
+# Board resource long-poll timeout
+long.poll.timeout=30000
 
 ## Tell Spring not to spam the console
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=ERROR
