--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.kartoffelquadrat</groupId>
-    <artifactId>lobbyservice.xox</artifactId>
+    <artifactId>lobbyservice.samplegameservice</artifactId>
     <version>1.0.0.</version>
     <packaging>jar</packaging>
 
@@ -22,7 +22,23 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <!-- legal -->
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -60,6 +76,13 @@
         <finalName>Xox</finalName>
 
         <plugins>
+            <!-- enforce passing junit tests as build precondition -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
