fixed CSS resolving

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,13 @@ oauth2.name=xox
 oauth2.password=laaPhie*aiN0
 
 ## Network properties
-# Location of the Lobby-Service
-lobbyservice.location=http://127.0.0.1:4242
+# Location of Xox Service, as registered at Lobby-Service
+gameservice.location=http://127.0.0.1
 # Own port
 server.port=4244
+# Location of the Lobby-Service
+lobbyservice.location=http://127.0.0.1:4242
+
 # Own context path, should be identical to gameservice.name
 server.servlet.context-path=/Xox
 # Board resource long-poll timeout
@@ -18,3 +21,6 @@ long.poll.timeout=30000
 ## Tell Spring not to spam the console
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=ERROR
 spring.main.banner-mode=off
+
+# Enable thymeleaf resolving of css / js
+spring.resources.add-mappings=true
