--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.main.banner-mode=off
 
 # Enable thymeleaf resolving of css / js
 spring.resources.add-mappings=true
+
+## Debug
+# Skip registration / callbacks to LS
+debug.skip.registration=true
