Correct detection of your turn / not your turn and update of status field.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.resources.add-mappings=true
 
 ## Debug
 # Skip registration / callbacks to LS
-debug.skip.registration=true
+debug.skip.registration=false
