--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,6 @@ spring.main.banner-mode=off
 spring.resources.add-mappings=true
 
 ## Debug
-# Skip registration / callbacks to LS
+# Skip registration / callbacks to LS (set to true, before running unit tests / coverage)
 debug.skip.registration=false
+#debug.skip.registration=true
