Added additional TL endpoint for registration details. Added "back to lobby button stub"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,5 @@ spring.resources.add-mappings=true
 
 ## Debug
 # Skip registration / callbacks to LS (set to true, before running unit tests / coverage)
-debug.skip.registration=false
-#debug.skip.registration=true
+#debug.skip.registration=false
+debug.skip.registration=true
