Removed command line scanner and updated configuration files for dockerized startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ gameservice.location=http://127.0.0.1
 # Own port
 server.port=4244
 # Location of the Lobby-Service
-lobbyservice.location=http://127.0.0.1:4242
+#lobbyservice.location=http://127.0.0.1:4242
+lobbyservice.location=http://restapi:4242
 
 # Own context path, should be identical to gameservice.name
 server.servlet.context-path=/Xox
@@ -27,5 +28,5 @@ spring.resources.add-mappings=true
 
 ## Debug
 # Skip registration / callbacks to LS (set to true, before running unit tests / coverage)
-#debug.skip.registration=false
-debug.skip.registration=true
+debug.skip.registration=false
+#debug.skip.registration=true
