--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ oauth2.password=laaPhie*aiN0
 
 ## Network properties
 # Location of Xox Service, as registered at Lobby-Service
-gameservice.location=http://127.0.0.1
+#gameservice.location=http://127.0.0.1
+gameservice.location=http://xox
 # Own port
 server.port=4244
 # Location of the Lobby-Service
