--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,18 @@
 ## Own service properties
+#
+# Enable DEV/PROD specific settings
+spring.profiles.active=@activatedProperties@
 # Name, as it will be displayed by Lobby-Service
 gameservice.name=Xox
 # Credentials for OAuth token retrieval (required for registration at Lobby-Service)
 oauth2.name=xox
 oauth2.password=laaPhie*aiN0
 
-## Network properties
-# Location of Xox Service, as registered at Lobby-Service
-#gameservice.location=http://127.0.0.1
-gameservice.location=http://xox
+## Network properties - Some settings are overridden by extenden dev/prod properties.
+#
 # Own port
 server.port=4244
-# Location of the Lobby-Service
-#lobbyservice.location=http://127.0.0.1:4242
-lobbyservice.location=http://restapi:4242
-
+#
 # Own context path, should be identical to gameservice.name
 server.servlet.context-path=/Xox
 # Board resource long-poll timeout
@@ -26,8 +24,3 @@ spring.main.banner-mode=off
 
 # Enable thymeleaf resolving of css / js
 spring.resources.add-mappings=true
-
-## Debug
-# Skip registration / callbacks to LS (set to true, before running unit tests / coverage)
-debug.skip.registration=false
-#debug.skip.registration=true
