--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
             <artifactId>asyncrestlib</artifactId>
             <version>1.5.1</version>
         </dependency>
+
+        <!--bootstrap support in webui-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
