additional comments for config files

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,7 @@
 ## DEV specific network properties
 
 # Location of Xox Service, as registered at Lobby-Service
+# Note: Allthough this information can be queried by the end user (via LS: /gameservices/name), this field is of no relevance to the end user. If deployed in a prod environment, the web-client should only adapt the port, not the server location, as the different services are concealed behind an API-GW / Load-balancers.
 gameservice.location=http://xox
 
 # Location of the Lobby-Service
