--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+.idea
+.idea/
+.idea/*
 *.iml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
