--- a/src/main/resources/application-uidev.properties
+++ b/src/main/resources/application-uidev.properties
@@ -1,5 +1,5 @@
 ## Extended properties for deployment in UI-DEV mode.
-# Similiar to DEV mode, but omits the initial registration at startup, is to say using this configuration the game can
+# Similar to DEV mode, but omits the initial registration at startup, is to say using this configuration the game can
 # be launched without any dependencies to other services, which allows development of the UI (as long as no actions are
 # involved that require communication with other services).
 #
