--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
             <version>4.5.3</version>
         </dependency>
 
+        <!--Log4j logging to cature sysout / err by tomcat-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
