Enabled spring logging to CATALINA_BASE/logs/xox.log

--- a/src/main/resources/application-war.properties
+++ b/src/main/resources/application-war.properties
@@ -15,3 +15,7 @@ lobbyservice.location=https://127.0.0.1/bgp
 ## Debug
 # Registration can be skipped for debug purposes.
 debug.skip.registration=false
+
+# Enable hard logging to file
+logging.file.name = ${catalina.base}/logs/xox.log
+
