--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ oauth2.password=laaPhie*aiN0
 server.port=4244
 #
 # Own context path, should be identical to gameservice.name
-server.servlet.context-path=/Xox
+server.servlet.context-path=/xox
 # Board resource long-poll timeout
 long.poll.timeout=30000
 
