Added (working) sample war context path configurations.

--- a/src/main/resources/application-war.properties
+++ b/src/main/resources/application-war.properties
@@ -7,10 +7,10 @@
 ## DEV specific network properties
 
 # Location of Xox Service, as registered at Lobby-Service
-gameservice.location=https://127.0.0.1/xox
+gameservice.location=https://kartoffelquadrat.eu:8443/xox
 
 # Location of the Lobby-Service
-lobbyservice.location=https://127.0.0.1/bgp
+lobbyservice.location=https://kartoffelquadrat.eu:8443/bgp
 
 ## Debug
 # Registration can be skipped for debug purposes.
