--- a/src/main/resources/application-war.properties
+++ b/src/main/resources/application-war.properties
@@ -1,7 +1,7 @@
 ## Extended properties for deployment in WAR mode.
-# War mode means the game is deployed natively as a service in an existing application container (tomcat), notbaly not as a JAR spring boot app or as a docker container.
+# War mode means the game is deployed natively as a service in an existing application container (tomcat), notably not as a JAR spring boot app or as a docker container.
 # Therefore URLs to related services (LS) have to be reference plain IPs, not docker-provided network identifiers.
-# Additionally this configuration assumes the applicatino container provides ceritficates, therefore the httpS protocol is configured, oinstead of standard http.
+# Additionally this configuration assumes the application container provides certificates, therefore the httpS protocol is configured, instead of standard http.
 # The game supposed to run on the same machine as the lobby service. (127.0.0.1)
 
 ## DEV specific network properties
