Additional properties comments and fixed registartion configuration for docker-compose deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ oauth2.password=laaPhie*aiN0
 # Own port
 server.port=4244
 #
-# Own context path, should be identical to gameservice.name
+# Own context path, should be identical to lowercase gameservice.name with leading "/"
 server.servlet.context-path=/xox
 # Board resource long-poll timeout
 long.poll.timeout=30000
