--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,13 +2,16 @@
 # Prod mode means the game is deployed as a docker container, within a virtual network. URLs may therefore contain
 # docker-provided network identifiers.
 
-## DEV specific network properties
+## PROD specific network properties
 
 # Location of Xox Service, as registered at Lobby-Service
-# Note: Allthough this information can be queried by the end user (via LS: /gameservices/name), this field is of no relevance to the end user. If deployed in a prod environment, the web-client should only adapt the port, not the server location, as the different services are concealed behind an API-GW / Load-balancers.
-gameservice.location=http://xox
+# The below locations should use docker-container descriptors, as docker compose creates a virtual network with registered container names.
+# The JS client assumes all services are deployed on the same machine and preserves server location at page forward between services.
+# protocol + :// + containername + : + port + application context ("xox", see main application.properties)
+gameservice.location=http://xox:4244/xox
 
 # Location of the Lobby-Service
+# protocol + :// + containername + : + port + application context (is empty fot the ls, as it binds to "/")
 lobbyservice.location=http://lobby:4242
 
 ## Debug
