Added properties based reconnect falg and timer. Placed registration in extra thread to unblock deployment of parallel applications.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,11 @@ server.servlet.context-path=/xox
 # Board resource long-poll timeout
 long.poll.timeout=30000
 
+# Flag to enable retry if registration at lobbyservice fails (only a single retry is performed if set to true)
+registration.retry=true
+# Seconds to wait before attempting a registration retry (only has an effect if previous flag is set to true)
+registration.retry.timer=45
+
 ## Tell Spring not to spam the console
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=ERROR
 spring.main.banner-mode=off
