Fixed registration URL in dev profile. Enabled automatic token refresh

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@
 ## DEV specific network properties
 
 # Location of Xox Service, as registered at Lobby-Service
-gameservice.location=http://127.0.0.1
+gameservice.location=http://127.0.0.1:4244/xox
 
 # Location of the Lobby-Service
 lobbyservice.location=http://127.0.0.1:4242
