--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,17 @@
 #
 # Enable DEV/PROD specific settings
 spring.profiles.active=@activatedProperties@
-# Name, as it will be displayed by Lobby-Service
+# Name, as game will be referenced by Lobby-Service
 gameservice.name=Xox
+
+# Name, as game will be displayed by Lobby-Service (Use \u0020 for whitespaces)
+gameservice.displayname=Tic\u0020Tac\u0020Toe
+
 # Credentials for OAuth token retrieval (required for registration at Lobby-Service)
 oauth2.name=xox
 oauth2.password=laaPhie*aiN0
 
-## Network properties - Some settings are overridden by extenden dev/prod properties.
+## Network properties - Some settings are overridden by extended dev/prod properties.
 #
 # Own port
 server.port=4244
