Relaxed token access restrictions to allow playing by admin players

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # Enable DEV/PROD specific settings
 spring.profiles.active=@activatedProperties@
 # Name, as game will be referenced by Lobby-Service
-gameservice.name=Xox
+gameservice.name=xox
 
 # Name, as game will be displayed by Lobby-Service (Use \u0020 for whitespaces)
 gameservice.displayname=Tic\u0020Tac\u0020Toe
